--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,8 +14,7 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "moduleDetection": "force",
-    "moduleResolution": "node"
+    "moduleDetection": "force"
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
