routing to other pages

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/android": "^7.0.1",
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
-    "@capacitor/ios": "^7.0.1"
+    "@capacitor/ios": "^7.0.1",
+    "svelte-spa-router": "^4.0.1"
   }
 }
